# cin-audiocodec

./: .gitmodules  README.md  build.sh  setup-3rd.sh
3rd/: run-3rd.sh
annexb_to_lengthed/: Makefile  annexb.h  main.cpp
audiocodec/: Makefile  aaccodec.cpp  aaccodec.h  amrnbcodec.cpp  amrnbcodec.h  amrwbcodec.cpp  amrwbcodec.h  audiocodecs.cpp  audiocodecs.h  audiotranscoder.cpp  audiotranscoder.h  g711codec.cpp  g711codec.h  g729codec.cpp  g729codec.h  mp3codec.cpp  mp3codec.h  opuscodec.cpp  opuscodec.h
audiocodec/test/: Makefile  audiocodectest.cpp
codec_h265/: README.md
recorder/: Cargo.toml  README.md
recorder/src/: main.rs  rwbuf.rs
recorder/src/ffeasy/: encoder.rs  ffi.rs  gen_sdp.rs  mod copy.rs  mod.rs  output.rs  parameters.rs  rtp.rs  rtp_mem.rs  time.rs
recorder/src/ffeasy/audio/: input.rs  mod.rs  resampler.rs  swr.rs
recorder/src/ffeasy/video/: defines.rs  image.rs  input.rs  mod.rs  scaler.rs
recorder/src/media/: defines.rs  mod.rs
recorder/src/mix_audio/: mixer.rs  mod.rs
recorder/src/mix_video/: defines.rs  layout_big_left.rs  layout_dynamic.rs  layout_grids.rs  mixer.rs  mod.rs
recorder/src/poc/: mod.rs  poc_mp4_to_tlv.rs  poc_tlv_to_h264.rs  poc_tlv_to_mp4.rs
recorder/src/rtp/: fmtp.rs  mod.rs  rtp.rs
recorder/src/rtp/codec/: mod.rs
recorder/src/rtp/codec/aac/: mod.rs
recorder/src/rtp/codec/h264/: mod.rs  parameters.rs
recorder/src/rtp/depack/: depack_simple.rs  mod.rs
recorder/src/rtp/inorder/: mod.rs
recorder/src/rtp/retina/: depack.rs  mod.rs
recorder/src/rtp/webrtc_rs/: depack_webrtc_rs.rs  mod.rs
recorder/src/sdp/: mod.rs  sdp.rs
recorder/src/tlv2/: decoder.rs  header.rs  mod.rs  seg_buf.rs  tag_buf.rs  tag_value.rs
recorder/src/tlv2/reader/: mod.rs  reader.rs  vec_buf.rs
recorder/src/tlv2/varint/: decode.rs  encode.rs  generic.rs  mod.rs  zigzag.rs
recorder/src/tlv_custom/: item.rs  mod.rs  tlv_custom.rs  tlv_file_parser.rs  tlv_muxer.rs  tlv_writer.rs
rtp_h265/: Makefile  README.md
rtp_h265/test/: Makefile  annexb.cpp  rwbuf.h  testrtph265.cpp
