[package]
name = "recorder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "=1.28.2", features = ["full"] }
tokio-util = {version = "=0.7.8", features = ["full"]}
tokio-stream = { version = "=0.1.14", features = ["sync"] }
tokio-rustls = "=0.24.1"
rustls = "=0.21.6"

futures="=0.3.28"
anyhow = "=1.0.71"
bytes = "=1.1.0"

tracing = { version = "=0.1.37", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = {version = "=0.3.17", features = ["local-time", "env-filter"]}
tracing-appender = "=0.2.2"
time = {version = "=0.3.21", features = ["formatting", "macros"]}

tinyvec = {version = "=1.6.0", features = ["alloc"]}
chrono = "=0.4.26"
lazy_static = "=1.4.0"
