[package]
name = "recorder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


tokio = { version = "=1.36.0", features = ["full"] }

# tokio = { version = "=1.28.2", features = ["full"] }
tokio-util = {version = "=0.7.8", features = ["full"]}
tokio-stream = { version = "=0.1.14", features = ["sync"] }
tokio-rustls = "=0.24.1"

rustls = "=0.21.6"

futures="=0.3.28"
anyhow = "=1.0.71"
bytes = "=1.1.0"

tracing = { version = "=0.1.37", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = {version = "=0.3.17", features = ["local-time", "env-filter"]}
tracing-appender = "=0.2.2"
time = {version = "=0.3.21", features = ["formatting", "macros"]}

tinyvec = {version = "=1.6.0", features = ["alloc"]}
chrono = "=0.4.26"
lazy_static = "=1.4.0"

serde = {version = "=1.0.164", features = ["derive", "rc"]}
serde_derive = "=1.0.164"
serde_json = "=1.0.65"


video-rs = { version = "=0.5.0" }
rtp = "=0.10.0"
rtp-rs = "=0.6.0"
sdp-rs = "=0.2.1"
webrtc-sdp = "=0.3.11"
retina = "=0.4.7"
h264-reader = "=0.7.0"
pretty-hex = "=0.4.1"
enumflags2 = "=0.7.9"
indoc = "=2.0.4"

# thiserror = "=1.0.57"

[dependencies.base64]
version = "=0.21.7"


[dependencies.ffmpeg-next]
version = "=6.1.1"
features = [
    "format",
    "codec",
    "software-resampling",
    "software-scaling",
]

[dependencies.ffmpeg-sys-next]
version = "=6.1.0"
# # default-features = false

[dependencies.libc]
version = "0.2"

